--- a/project-4-api/package.json
+++ b/project-4-api/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "pg": "^8.4.2",
     "sequelize": "^6.3.5"
   }
