--- a/project4/package.json
+++ b/project4/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.0",
     "antd": "^4.8.2",
     "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
